# master-thesis

./: .gitignore  README.md  make_doc.sh
code/: CMakeLists.txt  README.md  paths.m  problem1.m
code/cmake/Modules/: FindGlog.cmake
code/doc/: Doxyfile.in
code/examples/chapter1/: README.md  ch1_plot_scft_example.m  ch1_scft_example_data.mat  ch1_scft_example_data2.mat
code/examples/chapter4/: README.md
code/examples/chapter4/example1/: ch4ex1_precomputed.mat  ch4ex1_run.m
code/examples/chapter4/example2/: ch4ex2_precomputed.mat  ch4ex2_run.m
code/examples/chapter4/example3/: ch4ex3_precomputed.mat  ch4ex3_run.m
code/examples/chapter4/shared/: ch4_compute_stability.m  ch4_load_precomputed_data.m  ch4_precompute_examples.m
code/examples/chapter4/stability/: calc_stability_sine.m  precomputeStability.m  stability.m  stabilityFourierCalc.m  stabilityFourierLoad.m  stabilityLoadPrecomputed.m  stabilitySineCalc.m  stabilitySineCalc2.m
code/examples/chapter5/: README.md
code/examples/chapter5/example1/: ch5ex1_compare_scm_exakt.m  ch5ex1_online_query.m  ch5ex1_plot_everything.m  ch5ex1_precompute_example.m  ch5ex1_precomputed.mat  ch5ex1_problem_data.m  ch5ex1_run.m  ch5ex1_run_analysis.m
code/examples/chapter5/example2/: ch5ex2_online_query.m  ch5ex2_plot_everything.m  ch5ex2_precompute_example.m  ch5ex2_problem_data.m  ch5ex2_run.m
code/include/scft/: config.hpp  integration.hpp  matrix.hpp  rk2.hpp
code/lib/: MatlabDocMaker.m
code/lib/MatlabDocMaker/: MatlabDocMaker.m
code/src/: ProblemData.m  main.cpp  setup.m
code/src/galerkin/: AssembleMassMatrix.m  AssemblyAbstract.m  AssemblyFourierLegendre.m  AssemblyFourierLegendreSlow.m  AssemblyGlobalAbstract.m  AssemblySineLegendre.m  AssemblyTensorAbstract.m  GalerkinSolver.m  Steifigkeitmatrix.m
code/src/galerkin/solver/: SolverAbstract.m  SolverFourierLegendre.m  SolverFourierNodal.m  SolverNodal.m
code/src/galerkin/spacetime/: AssemblyFiniteElements.m  AssemblyFourierLegendre.m  AssemblyGlobalAbstract.m  SpaceTimeAssemblyAbstract.m
code/src/rbm/: RBM.m  RBMSolverAbstract.m  RBMSolverFourierNodal.m  ReducedBasisSolver.m  SCM.m
code/src/scft/: integration.cpp  matrix.cpp  rk2.cpp
code/src/util/: Utility.m  coeff2vec.m  computeEV.m  computeEVdense.m  computeMaxEV.m  computeMinEV.m  computeMinMaxEV.m  computeMinMaxEVdense.m  computeMinMaxEv.m  generateInitialDataStruct.m  git_gud_grid.m  legendrePolynomial.m  legendrePolynomialDerivative.m  legendre_dP.m  legendre_dP_shifted.m  trapez.m  vec2coeff.m
code/test/: fftw.cxx  integration.cxx  run_tests.m  testAssemblyFourierLegendre.m  testAssemblySineLegendre.m
(+928 files in other folders)
